# django-rest-framework-tutorial

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
tutorial/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
tutorial/tutorial/: settings.py  urls.py
