[tool.poetry]
name = "django-rest-framework-tutorial"
version = "0.1.0"
description = ""
authors = ["Fedor Chervyakov <fchervyakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
Pygments = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
